fix: Card.Meta title no ellipsis when text too long
meta's title use display:table-cell , but not set tabel-layout at parent,so when the text too long ,it will not ellipsis

--- a/components/card/style/index.less
+++ b/components/card/style/index.less
@@ -188,6 +188,9 @@
 
   &-meta {
     margin: -4px 0;
+    display: table;
+    table-layout: fixed;
+    width: 100%;
 
     &-content {
       display: table-row;
